--- a/HouseManage/HouseManage/Views/Merchants/ShopInfos.cshtml
+++ b/HouseManage/HouseManage/Views/Merchants/ShopInfos.cshtml
@@ -1,13 +1,13 @@
 ﻿
 @{
-    ViewData["Title"] = "商铺";
+    ViewData["Title"] = "商铺信息";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<header class="mui-bar mui-bar-nav">
+@*<header class="mui-bar mui-bar-nav">
     <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
     <h1 class="mui-title">商铺信息</h1>
-</header>
+</header>*@
 <div id="pullrefresh" class="mui-content mui-scroll-wrapper">
     <div class="mui-scroll">
         <ul class="mui-table-view">
